# Qt-Fluent-Widgets

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/common/: app_config.cpp  app_config.h  gallery_icon.cpp  gallery_icon.h  gallery_style_sheet.cpp  gallery_style_sheet.h  signal_bus.cpp  signal_bus.h  translator.cpp  translator.h  trie.cpp  trie.h
app/components/: link_card.cpp  link_card.h  sample_card.cpp  sample_card.h
app/resources/: gallery.qrc
app/view/: basic_input_interface.cpp  basic_input_interface.h  date_time_interface.cpp  date_time_interface.h  dialog_interface.cpp  dialog_interface.h  gallery_interface.cpp  gallery_interface.h  home_interface.cpp  home_interface.h  icon_interface.cpp  icon_interface.h  layout_interface.cpp  layout_interface.h  main_window.cpp  main_window.h  material_interface.cpp  material_interface.h  menu_interface.cpp  menu_interface.h  navigation_view_interface.cpp  navigation_view_interface.h  scroll_interface.cpp  scroll_interface.h  setting_interface.cpp  setting_interface.h  status_info_interface.cpp  status_info_interface.h  text_interface.cpp  text_interface.h  top_main_window.cpp  top_main_window.h  view_interface.cpp  view_interface.h
docs/: README_zh.md
qtfluentwidgets/: CMakeLists.txt  qtfluentwidgets.h
qtfluentwidgets/common/: animation.cpp  animation.h  auto_wrap.cpp  auto_wrap.h  color.cpp  color.h  config.cpp  config.h  font.cpp  font.h  icon.cpp  icon.h  router.cpp  router.h  screen.cpp  screen.h  smooth_scroll.cpp  smooth_scroll.h  style_sheet.cpp  style_sheet.h  (+4 more)
(+187 files in other folders)
